--- a/index.html
+++ b/index.html
@@ -2,140 +2,119 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Image Uploader and Renamer</title>
-  <style>
-    /* Styles for modern layout - created by Nigam Patel */
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f5f5f5;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    .container {
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      padding: 40px;
-      width: 400px;
-      text-align: center;
-    }
-
-    h1 {
-      margin-bottom: 20px;
-      color: #333;
-    }
-
-    input[type="file"],
-    textarea,
-    select,
-    button {
-      display: block;
-      width: calc(100% - 20px);
-      padding: 12px;
-      margin: 10px auto;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      font-size: 16px;
-      box-sizing: border-box;
-    }
-
-    input[type="file"] {
-      cursor: pointer;
-    }
-
-    button {
-      background-color: #3498db;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #2980b9;
-    }
-
-    a {
-      display: block;
-      margin-top: 20px;
-      text-decoration: none;
-      color: #3498db;
-      font-weight: bold;
-      display: none;
-    }
-  </style>
+  <title>Image Dimension Generator</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <h1>Image Uploader and Renamer</h1>
-    <input type="file" id="fileInput" multiple accept=".jpeg, .jpg, .png">
-    <textarea id="namesInput" placeholder="Enter names separated by commas"></textarea>
-    <select id="downloadFormat">
-      <option value="zip">ZIP</option>
-      <option value="jpeg">JPEG</option>
-      <option value="png">PNG</option>
-    </select>
-    <button id="uploadButton">Upload & Rename Images</button>
-    <a href="#" id="downloadLink">Download Renamed Images</a>
+  <div class="container mt-4">
+    <h2>Upload Images and Set Dimensions</h2>
+
+    <div>
+      <label for="imageNames">Image Names (Comma-separated):</label>
+      <textarea id="imageNames" class="form-control mb-2" placeholder="Enter image names separated by commas"></textarea>
+      <input type="file" id="fileInput" class="form-control-file mb-2" multiple>
+      <label for="dimensions">Enter Dimensions (Comma-separated, e.g., 100x100,200x200):</label>
+      <textarea id="dimensions" class="form-control mb-3" placeholder="Enter dimensions separated by commas"></textarea>
+      <button class="btn btn-primary" onclick="addImages()">Add Images</button>
+    </div>
+
+    <hr>
+
+    <h2>Uploaded Images with Dimensions</h2>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Image Name</th>
+          <th scope="col">Dimensions</th>
+        </tr>
+      </thead>
+      <tbody id="uploadedImages"></tbody>
+    </table>
+
+    <button class="btn btn-success" onclick="generateZip()">Download Zip</button>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"></script>
   <script>
-    document.getElementById('uploadButton').addEventListener('click', function() {
+    let uploadedImages = {};
+
+    function addImages() {
+      const imageNamesInput = document.getElementById('imageNames').value.trim();
+      const dimensionsInput = document.getElementById('dimensions').value.trim();
+      const imageNames = imageNamesInput.split(',').map(name => name.trim());
+      const dimensions = dimensionsInput.split(',').map(dimension => dimension.trim());
+
+      if (imageNames.length !== dimensions.length) {
+        alert('Number of image names and dimensions should be the same.');
+        return;
+      }
+
       const fileInput = document.getElementById('fileInput');
-      const namesInput = document.getElementById('namesInput');
-      const downloadLink = document.getElementById('downloadLink');
-      const downloadFormat = document.getElementById('downloadFormat').value;
+      const files = fileInput.files;
 
-      if (!fileInput.files.length || !namesInput.value.trim()) {
-        alert('Please select images and provide names.');
+      if (!files || files.length !== imageNames.length) {
+        alert('Please upload the correct number of images.');
         return;
       }
 
-      const files = Array.from(fileInput.files);
-      const names = namesInput.value.split(',').map(name => name.trim());
+      for (let i = 0; i < files.length; i++) {
+        const file = files[i];
+        const imageName = imageNames[i];
+        const dimension = dimensions[i];
 
-      if (files.length !== names.length) {
-        alert('Number of images and names should match.');
-        return;
-      }
-
-      const renamedFiles = [];
-      const zip = new JSZip();
-
-      files.forEach((file, index) => {
-        const newName = names[index];
-        const extension = file.name.split('.').pop().toLowerCase();
-        const renamedFile = new File([file], `${newName}.${extension}`, { type: file.type });
-        renamedFiles.push(renamedFile);
-
-        if (downloadFormat === 'zip') {
-          zip.file(`${newName}.${extension}`, renamedFile);
-        }
-      });
-
-      if (downloadFormat === 'zip') {
-        zip.generateAsync({ type: 'blob' }).then(function(content) {
-          const url = window.URL.createObjectURL(content);
-          downloadLink.href = url;
-          downloadLink.download = 'renamed_images.zip';
-          downloadLink.style.display = 'block';
-        });
-      } else {
-        if (renamedFiles.length === 1) {
-          const url = window.URL.createObjectURL(renamedFiles[0]);
-          downloadLink.href = url;
-          downloadLink.download = `${names[0]}.${downloadFormat}`;
-          downloadLink.style.display = 'block';
+        if (!uploadedImages[imageName]) {
+          uploadedImages[imageName] = { file, dimension };
+          const uploadedImagesTable = document.getElementById('uploadedImages');
+          const row = uploadedImagesTable.insertRow();
+          const nameCell = row.insertCell(0);
+          const dimensionCell = row.insertCell(1);
+          nameCell.textContent = imageName;
+          dimensionCell.textContent = dimension;
         } else {
-          alert('Select ZIP to download multiple files.');
+          alert('Image name already exists. Please choose a different name.');
         }
       }
-    });
+    }
+
+    function generateZip() {
+      const zip = new JSZip();
+      const promises = [];
+
+      for (const imageName in uploadedImages) {
+        const { file, dimension } = uploadedImages[imageName];
+        const img = new Image();
+        img.src = URL.createObjectURL(file);
+        const [width, height] = dimension.split('x').map(Number);
+
+        const promise = new Promise((resolve) => {
+          img.onload = function() {
+            const canvas = document.createElement('canvas');
+            const ctx = canvas.getContext('2d');
+            canvas.width = width;
+            canvas.height = height;
+            ctx.drawImage(img, 0, 0, width, height);
+
+            canvas.toBlob(function(blob) {
+              const fileName = imageName.split('_')[0]; // Remove the dimension suffix
+              zip.file(`${fileName}.png`, blob);
+              resolve();
+            }, 'image/png');
+          };
+        });
+        promises.push(promise);
+      }
+
+      Promise.all(promises).then(() => {
+        zip.generateAsync({ type: 'blob' }).then(function(content) {
+          const downloadLink = document.createElement('a');
+          downloadLink.href = URL.createObjectURL(content);
+          downloadLink.download = 'resized_images.zip';
+          document.body.appendChild(downloadLink);
+          downloadLink.click();
+          document.body.removeChild(downloadLink);
+        });
+      });
+    }
   </script>
 </body>
 </html>
